# pulumi-provisioning

./: .gitignore  AWS_ACCESS_KEY_EXPLANATION.md  AWS_SETUP.md  CONCURRENCY_STRATEGY.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_WORKFLOW.md  DEV_SETUP_STEPS.md  Dockerfile  FIX_PULUMI_IMPORT_ERROR.md  FIX_VENV_ISSUE.md  IAC_PR_WORKFLOWS.md  IAM_PRODUCTION_SETUP.md  IAM_ROLES_VERIFICATION.md  LOCAL_SETUP_NEXT_STEPS.md  NEXT_STEPS.md  OIDC_SETUP.md  PUSH_TO_GITHUB.md  Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  QUICK_START.md  README.md  SECURITY.md  SETUP.md  UV_SETUP.md  docker-compose.yml  get-github-thumbprint.sh  github-actions-trust-policy.json  pulumi-infrastructure-policy.json  quick-verify.sh  setup-aws.example.sh  test-docker-local.sh  verify-pulumi.sh  verify-setup.sh
.github/workflows/: destroy.yml  prod.yml  test.yml
app/: README.md  config.py  db_operations.py  main.py  models.py  pyproject.toml  s3_operations.py
infrastructure/: __init__.py  __main__.py  config-template.yaml  config.py  pyproject.toml  setup-stack.sh
infrastructure/components/: __init__.py  acm.py  ec2.py  ecr.py  iam.py  networking.py  rds.py  route53.py  s3.py
infrastructure/config_types/: networking_config.py  rds_config.py  s3_config.py
infrastructure/types/: __init__.py  ec2_config.py  iam_config.py  rds_config.py
nginx/: fastapi.conf  nginx.conf  ssl.conf
